docs: fix pervasive inaccuracies in testing/ reference docs
The docs/development/testing/*.md pages had drifted far from the real test
suite: fictional test-case names, function/API names that were never used
(snake_case vector_add/vector_distance_cosine, db.out()/in() traversals,
isolation-level/retry transaction config), stale test counts, and references
to HNSW/IVF index types the engine doesn't expose (it uses LSM_VECTOR).

Reconciled each doc strictly against its source test file: correct counts,
real test names and docstrings, the actual SQL/API surface exercised. Docs
already accurate were left untouched. Verified that every test name and
vector/SQL function name referenced now exists in the corresponding test file.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>